--- a/src/formularios/frmCompraDetallada.form
+++ b/src/formularios/frmCompraDetallada.form
@@ -461,7 +461,7 @@
           <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor de Movimiento"/>
+          <Color id="Cursor Por defecto"/>
         </Property>
       </Properties>
       <Events>
