--- a/src/formularios/frmProductosAgregar.form
+++ b/src/formularios/frmProductosAgregar.form
@@ -752,6 +752,7 @@
           <Color blue="99" green="99" red="99" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Productos"/>
+        <Property name="toolTipText" type="java.lang.String" value="Ver listado de todos los productos."/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor de Mano"/>
         </Property>
@@ -774,7 +775,7 @@
           <Color blue="33" green="33" red="33" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Agregar Productos"/>
-        <Property name="toolTipText" type="java.lang.String" value="Ver los detalles de compras realizadas."/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor Por defecto"/>
         </Property>
