--- a/src/formularios/frmProductosModificar.form
+++ b/src/formularios/frmProductosModificar.form
@@ -221,6 +221,7 @@
           <Color blue="99" green="99" red="99" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Productos"/>
+        <Property name="toolTipText" type="java.lang.String" value="Ver listado de todos los productos."/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor de Mano"/>
         </Property>
@@ -240,12 +241,12 @@
           <Font name="Segoe UI Light" size="14" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="33" red="33" type="rgb"/>
+          <Color blue="99" green="99" red="99" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Agregar Productos"/>
-        <Property name="toolTipText" type="java.lang.String" value="Ver los detalles de compras realizadas."/>
+        <Property name="toolTipText" type="java.lang.String" value="Agregar un nuevo producto."/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Por defecto"/>
+          <Color id="Cursor de Mano"/>
         </Property>
       </Properties>
       <Events>
